# symmetrical-distributed-swarm

./: .gitignore  enrich_with_vectors.py  flake.nix  ignite.sh  mirror.sh  mix.exs  neural_search.py  repo_to_json.py  repo_to_json_tree_sitter.py  swarm_archive.json  swarm_archive_neural.json
config/: config.exs
lib/swarm_brain/: antenna.ex  application.ex  blackboard.ex  codec.ex  cortex.ex  discovery.ex  eye.ex  formation.ex  location.ex  observation.ex  persistence.ex  pipeline.ex  protocol.ex  radio.ex  tactician.ex  tracker.ex  vision_serving.ex  watchman.ex
lib/swarm_brain/actor/: network.ex
lib/swarm_brain/blackboard/: fusion.ex
lib/swarm_brain/cortex/: model.ex  resnet.ex  switchboard.ex  watchdog.ex  yolo.ex
lib/swarm_brain/hardware/: spine.ex
lib/swarm_brain/llama/: summarizer.ex
lib/swarm_brain/logic/: tactician.ex
lib/swarm_brain/sensor/: fusion.ex  proprioception.ex
lib/swarm_brain/telemetry/: dispatcher.ex  guard.ex  monitor.ex
lib/swarm_brain/vision/: behaviour.ex  decoder.ex  nms.ex  (+5 more)
native/swarm_brain_nms/: Cargo.toml  README.md
native/swarm_brain_tactician/: Cargo.toml  README.md
native/swarm_brain_tactician/src/: lib.rs
native/swarm_native/: Cargo.toml
native/swarm_native/src/: lib.rs
native/swarm_native/src/nifs/: control.rs  legacy.rs  mod.rs  telemetry.rs
native/swarm_native/src/state/: arena.rs  mod.rs
native/swarm_native/src/types/: atomic_f32.rs  mod.rs
native/swarm_native/src/vision/: camera.rs  detector.rs  math.rs  mod.rs
native/swarm_vision/: Cargo.toml
native/swarm_vision/src/: lib.rs
priv/: quantize_brain.py
(+2 files in other folders)
